--- a/scripts/dev/ci/docker/Dockerfile.j2
+++ b/scripts/dev/ci/docker/Dockerfile.j2
@@ -9,8 +9,7 @@ RUN pacman -Suyy --noconfirm \
     python-distlib \
     qt5-base \
     qt5-declarative \
-    qt5-webengine \
-    python-pyqtwebengine \
+    {% if webengine %}qt5-webengine python-pyqtwebengine{% else %}qt5-webkit{% endif %} \
     python-pyqt5 \
     xorg-xinit \
     xorg-server-xvfb \
