--- a/scripts/dev/ci/docker/Dockerfile.j2
+++ b/scripts/dev/ci/docker/Dockerfile.j2
@@ -12,9 +12,6 @@ RUN pacman -Suyy --noconfirm \
     {% if webengine %}
     qt5-webengine python-pyqtwebengine \
     python-pyqt5 \
-    {% else %}
-    https://archive.archlinux.org/packages/q/qt5-webkit/qt5-webkit-5.212.0alpha4-18-x86_64.pkg.tar.zst \
-    https://archive.archlinux.org/packages/p/python-pyqt5/python-pyqt5-5.15.7-2-x86_64.pkg.tar.zst \
     {% endif %}
     xorg-xinit \
     xorg-server-xvfb \
@@ -22,6 +19,18 @@ RUN pacman -Suyy --noconfirm \
     gcc \
     libyaml \
     xorg-xdpyinfo
+
+{% if not webengine %}
+RUN pacman -U --noconfirm \
+    https://archive.archlinux.org/packages/q/qt5-webkit/qt5-webkit-5.212.0alpha4-18-x86_64.pkg.tar.zst \
+    https://archive.archlinux.org/packages/p/python-pyqt5/python-pyqt5-5.15.7-2-x86_64.pkg.tar.zst
+{% endif %}
+
+{% if webengine %}
+RUN python3 -c "from PyQt5 import QtWebEngineCore, QtWebEngineWidgets"
+{% else %}
+RUN python3 -c "from PyQt5 import QtWebKit, QtWebKitWidgets"
+{% endif %}
 
 RUN useradd user -u 1001 && \
     mkdir /home/user && \
