--- a/scripts/dev/ci/docker/Dockerfile.j2
+++ b/scripts/dev/ci/docker/Dockerfile.j2
@@ -3,7 +3,8 @@ FROM archlinux:latest
 {% if unstable %}
 RUN sed -i '/^# after the header/a[kde-unstable]\nInclude = /etc/pacman.d/mirrorlist\n\n[testing]\nInclude = /etc/pacman.d/mirrorlist\n\n[community-testing]\nInclude = /etc/pacman.d/mirrorlist' /etc/pacman.conf
 {% endif %}
-RUN pacman -Suyy --noconfirm \
+RUN pacman -Sy --noconfirm archlinux-keyring
+RUN pacman -Su --noconfirm \
     git \
     python-tox \
     python-distlib \
