docker: Init archlinux keyring

--- a/scripts/dev/ci/docker/Dockerfile.j2
+++ b/scripts/dev/ci/docker/Dockerfile.j2
@@ -1,5 +1,6 @@
 FROM archlinux:latest
 
+RUN pacman-key --init && pacman-key --populate
 {% if unstable %}
 RUN sed -i '/^# after the header/a[kde-unstable]\nInclude = /etc/pacman.d/mirrorlist\n\n[testing]\nInclude = /etc/pacman.d/mirrorlist\n\n[community-testing]\nInclude = /etc/pacman.d/mirrorlist' /etc/pacman.conf
 {% endif %}
