ci: attempt to make the qt6 docker run work
On CI were were getting "Could not import sip" because link_pyqt was
looking for PyQt5.sip.
I made that look at QUTE_QT_WRAPPER since that's being set already on
tox.ini
There are probably a few other changes around link_pyqt and the makefile
etc we need to change when we switch the default wrapper.

I overrode the default `py` tox environment with py-qt6 to override
those wrapper related variables. I probably could have done something
sneaky with curly braces to make it so we don't have to add a few more
lines to the file. But in my opinion in config file is far to obfuscated
and hard to maintain already.

I changed the docker file to call the new py-qt6 env if it's a qt6
container. I'm not 100% sure that is required though since there is also
a tox invocation in the GH action definition, maybe that overrides the
container entrypoint? Also changed the indentation in the dockerfile
template a bit to make it easier to see where the conditionals start and
end.

Speaking of which I changed the matrix definition and tox invocation to
match a later one to hopefully make it so we can invoke different tox
environments in the containers without having to rebuild the containers.
Not sure I did that right, I'll see soon.

I added the unstable-qt6 container generation line so we can use it in
the future, and to match the not-qt6 one. I'm not switching to that in
CI though because the pyqt used by that is broken at the moment
(ref https://www.riverbankcomputing.com/pipermail/pyqt/2023-March/045214.html)

Also fixed the vim modeline in generate.py so my syntax highlighting
works.

--- a/scripts/dev/ci/docker/Dockerfile.j2
+++ b/scripts/dev/ci/docker/Dockerfile.j2
@@ -10,19 +10,19 @@ RUN pacman -Su --noconfirm \
     python-tox \
     python-distlib \
     {% if qt6 %}
-    qt6-base \
-    qt6-declarative \
-    {% if webengine %}
-    qt6-webengine python-pyqt6-webengine \
-    {% else %}{{ 1/0 }}{% endif %}
-    python-pyqt6 \
+      qt6-base \
+      qt6-declarative \
+      {% if webengine %}
+        qt6-webengine python-pyqt6-webengine \
+      {% else %}{{ 1/0 }}{% endif %}
+      python-pyqt6 \
     {% else %}
-    qt5-base \
-    qt5-declarative \
-    {% if webengine %}
-    qt5-webengine python-pyqtwebengine \
-    {% endif %}
-    python-pyqt5 \
+      qt5-base \
+      qt5-declarative \
+      {% if webengine %}
+        qt5-webengine python-pyqtwebengine \
+      {% endif %}
+      python-pyqt5 \
     {% endif %}
     xorg-xinit \
     xorg-server-xvfb \
@@ -56,4 +56,4 @@ WORKDIR /home/user
 
 CMD git clone /outside qutebrowser.git && \
     cd qutebrowser.git && \
-    tox -e py
+    tox -e {% if qt6 %}py-qt6{% else %}py{% endif %}
