--- a/scripts/dev/ci/docker/Dockerfile.j2
+++ b/scripts/dev/ci/docker/Dockerfile.j2
@@ -39,7 +39,8 @@ RUN pacman -U --noconfirm \
     https://archive.archlinux.org/packages/q/qt5-webkit/qt5-webkit-5.212.0alpha4-18-x86_64.pkg.tar.zst \
     https://archive.archlinux.org/packages/p/python-pyqt5/python-pyqt5-5.15.7-2-x86_64.pkg.tar.zst \
     https://archive.archlinux.org/packages/p/python/python-3.10.10-1-x86_64.pkg.tar.zst
-RUN pip install tox
+RUN python3 -m ensurepip
+RUN python3 -m pip install tox pyqt5-sip
 {% endif %}
 
 {% if qt6 %}
