--- a/scripts/dev/ci/docker/Dockerfile.j2
+++ b/scripts/dev/ci/docker/Dockerfile.j2
@@ -18,6 +18,7 @@ RUN pacman -Su --noconfirm \
         qt6-webengine python-pyqt6-webengine \
       {% else %}{{ 1/0 }}{% endif %}
       python-pyqt6 \
+      xcb-util-cursor \
     {% else %}
       qt5-base \
       qt5-declarative \
