--- a/scripts/dev/ci/docker/Dockerfile.j2
+++ b/scripts/dev/ci/docker/Dockerfile.j2
@@ -68,4 +68,4 @@ WORKDIR /home/user
 
 CMD git clone /outside qutebrowser.git && \
     cd qutebrowser.git && \
-    tox -e {% if qt6 %}py-qt6{% else %}py{% endif %}
+    tox -e {% if qt6 %}py-qt6{% else %}py-qt5{% endif %}
