--- a/scripts/dev/ci/docker/Dockerfile.j2
+++ b/scripts/dev/ci/docker/Dockerfile.j2
@@ -22,6 +22,7 @@ RUN pacman -Su --noconfirm \
     {% else %}
       qt5-base \
       qt5-declarative \
+      openssl-1.1 \
       {% if webengine %}
         qt5-webengine \
         python-pyqtwebengine \
@@ -69,6 +70,7 @@ RUN useradd user -u 1001 && \
     chown user:users /home/user
 USER user
 WORKDIR /home/user
+RUN git config --global --add safe.directory /outside/.git
 
 CMD git clone /outside qutebrowser.git && \
     cd qutebrowser.git && \
